test/fail/downcast_variant01.v3
//@execute = !TypeCheckException @ 7:40
type T { case A; case B; }
def k = cast<T, T.B>();
def main() -> int {
	return k(T.A).tag;
}
def cast<X, Y>() -> X -> Y { return Y.!<X>; }
